--- a/src/config.toml
+++ b/src/config.toml
@@ -1,4 +1,4 @@
-baseURL = "http://example.org/"
+baseURL = "https://konohaderek.github.io/Blog_hugo/"
 languageCode = "zh-tw"
 title = "德瑞克小窩"
 theme = "beautifulhugo"
