feat : 更新佈景主題

--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -23,7 +23,7 @@ jobs:
         # extended: true
 
     - name: Build
-      run: hugo --minify --config=config.toml --source=src
+      run: hugo --minify --config=config.yaml --source=src
 
     - name: GitHub Pages
       if: success()
