--- a/src/config.toml
+++ b/src/config.toml
@@ -1,36 +1,63 @@
 baseURL = "https://konohaderek.github.io/Blog_hugo/"
+enablebaseurl = "https://username.github.io"
 languageCode = "zh-tw"
 title = "德瑞克小窩"
-theme = "gohugo-theme-ananke"
-author = "Derek"
+theme = "beautifulhugo"
 description = "Derek Blog"
-paginate = 3 
-DefaultContentLanguage = "zh-tw"
-SectionPagesMenu = "main"
-
-googleAnalytics = ""
 enableRobotsTXT = true
+DefaultContentLanguage = "zh-tw"
+metaDataFormat = "yaml"
+pygmentsStyle = "trac"
+pygmentsUseClasses = true
+pygmentsCodeFences = true
+pygmentsCodefencesGuessSyntax = true
+#pygmentsUseClassic = true
+#pygmentOptions = "linenos=inline"
+#disqusShortname = ""
+#googleAnalytics = ""
 
-[sitemap]
-  changefreq = "monthly"
-  priority = 0.5
-  filename = "sitemap.xml"
+[Params]
+#  homeTitle = "Beautiful Hugo Theme" # Set a different text for the header on the home page
+  subtitle = "生活小記事"
+  mainSections = ["post","posts"]
+  logo = "img/avatar-icon.png" # Expecting square dimensions
+  favicon = "img/favicon.ico"
+  dateFormat = "January 2, 2006"
+  commit = false
+  rss = true
+  comments = true
+  readingTime = true
+  wordCount = true
+  useHLJS = true
+  socialShare = true
+  delayDisqus = true
+  showRelatedPosts = true
+#  hideAuthor = true
+#  gcse = "012345678901234567890:abcdefghijk" # Get your code from google.com/cse. Make sure to go to "Look and Feel" and change Layout to "Full Width" and Theme to "Classic"
 
-[params]
-  favicon = ""
-  site_logo = ""
-  description = ""
-  facebook = ""
-  twitter = ""
-  instagram = ""
-  youtube = ""
+#[[Params.bigimg]]
+#  src = "img/triangle.jpg"
+#  desc = "Triangle"
+#[[Params.bigimg]]
+#  src = "img/sphere.jpg"
+#  desc = "Sphere"
+#  # position: see values of CSS background-position.
+#  position = "center top"
+#[[Params.bigimg]]
+#  src = "img/hexagon.jpg"
+#  desc = "Hexagon"
+
+[Author]
+  name = "Derek"
+  email = "peter890701@gmail.com"
   github = "https://github.com/KonohaDerek"
-  gitlab = ""
-  linkedin = ""
-  mastodon = ""
-  slack = ""
-  stackoverflow = ""
-  rss = ""
-  background_color_class = "bg-black"
-  featured_image = "/images/gohugo-default-sample-hero-image.jpg"
-  recent_posts_number = 2
+
+[[menu.main]]
+    name = "Blog"
+    url = ""
+    weight = 1
+
+[[menu.main]]
+    name = "Tags"
+    url = "tags"
+    weight = 3
