--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -13,8 +13,15 @@ jobs:
     steps:
     - uses: actions/checkout@v2
       with:
-          submodules: true  # Fetch Hugo themes (true OR recursive)
-          fetch-depth: 0    # Fetch all history for .GitInfo and .Lastmod
+        submodules: true  # Fetch Hugo themes (true OR recursive)
+        fetch-depth: 0    # Fetch all history for .GitInfo and .Lastmod
+
+    - name: Create cname file
+      run: echo "www.k-derek.dev" > static/CNAME
+
+    - name: Update robot.txt
+      run: |
+            echo -e "User-agent: *\nDisallow: /" > static/robots.txt
 
     - name: Setup Hugo
       uses: peaceiris/actions-hugo@v2
