--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -17,11 +17,7 @@ jobs:
         fetch-depth: 0    # Fetch all history for .GitInfo and .Lastmod
 
     - name: Create cname file
-      run: echo "www.k-derek.dev" > static/CNAME
-
-    - name: Update robot.txt
-      run: |
-            echo -e "User-agent: *\nDisallow: /" > static/robots.txt
+      run: echo "www.k-derek.dev" > src/static/CNAME
 
     - name: Setup Hugo
       uses: peaceiris/actions-hugo@v2
